[package]
name = "server"
version = "0.1.0"
authors = ["Noah AL-Shihabi <noahshihabi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc = "~0.8"
protobuf = "~2"
futures = "~0.3"

[build-dependencies]
protoc-rust-grpc = "~0.8"
walkdir = "2"