[package]
name = "server"
version = "0.1.0"
authors = ["Noah AL-Shihabi <noahshihabi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "~0.3"
grpc = "~0.8"
grpc-protobuf = "=0.8.1"
protobuf = "=2.14.0"
tls-api = "0.4.*"
tls-api-native-tls = "0.4.*"
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
protobuf-codegen-pure = "2.3"
protoc-rust-grpc = "=0.8.0"
protoc-rust = "=2.14.0"
walkdir = "~2"